--- a/thesis/formal/syms.tex
+++ b/thesis/formal/syms.tex
@@ -10,3 +10,4 @@
 \newcommand{\aggset}{A}
 \newcommand{\decirc}[2]{D(#1, #2)}
 \newcommand{\viol}[2]{V(#1, #2)}
+\newcommand{\trule}[1]{\textsl{#1}}
