Fix abstract formatting

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -80,9 +80,9 @@ The views and opinions of authors expressed herein do not necessarily state or r
 
 \setcmuspacing
 \begin{abstract}
-        {\small \input{abstract.tex}}
+        {\input{abstract.tex}}
 \end{abstract}
-
+\clearpage
 %\begin{acknowledgements}
 %\end{acknowledgements}
 
